--- a/src/css/CustomerOrderList.scss
+++ b/src/css/CustomerOrderList.scss
@@ -3,7 +3,7 @@
   padding: 10px;
   background-color: #f5f6f8;
   height: 80vh;
-  overflow: scroll;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -14,7 +14,7 @@
   width: 90vw;
   padding: 10px;
   background-color: #f5f6f8;
-  height: 90vh;
+  height: 80vh;
   overflow: scroll;
   display: flex;
   flex-direction: column;
