--- a/src/components/orders/customers/sass/CustomerOrderCard.scss
+++ b/src/components/orders/customers/sass/CustomerOrderCard.scss
@@ -3,9 +3,13 @@
     table {
       tbody {
         tr {
+          height: 35px;
           td {
             color: #000;
             font-size: 14px;
+            .component-customer-order-card__check-button {
+              margin-right: 10px;
+            }
             span {
               display: inline-block;
               text-overflow: ellipsis;
@@ -26,9 +30,13 @@
       width: max-content;
       tbody {
         tr {
+          height: 35px;
           td {
             color: #000;
             font-size: 14px;
+            .component-customer-order-card__check-button {
+              display: none;
+            }
             span {
               display: inline-block;
               text-overflow: ellipsis;
