--- a/src/components/shared/SalesGroupSelector.scss
+++ b/src/components/shared/SalesGroupSelector.scss
@@ -2,9 +2,10 @@
   width: 100%;
   border-bottom: 2px solid #a5a5a5;
   height: 10vh;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   display: flex;
+  padding: 0 10px;
   select {
     height: 60%;
     width: 50%;
