add @include mobile scss code

--- a/src/components/orders/customers/sass/CustomerOrderCard.scss
+++ b/src/components/orders/customers/sass/CustomerOrderCard.scss
@@ -25,6 +25,9 @@
     width: 45vw;
     overflow: scroll;
     display: block;
+    @include mobile {
+      display: none;
+    }
 
     table {
       width: max-content;
