--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -4,3 +4,13 @@
 @import "../css/index.scss";
 @import "./auth/index.scss";
 @import "./orders/index.scss";
+@import "./reports/detailView/tables/style.scss";
+.app {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  @include mobile {
+    flex-direction: column;
+    font-size: 14px;
+  }
+}
