--- a/src/components/auth/Login.scss
+++ b/src/components/auth/Login.scss
@@ -26,7 +26,9 @@
     width: 60%;
     margin: auto;
     margin-top: 5rem;
-
+    @include mobile {
+      width: 90%;
+    }
     .form-field {
       width: 100%;
       display: flex;
