--- a/src/components/orders/products/sass/Page.scss
+++ b/src/components/orders/products/sass/Page.scss
@@ -3,6 +3,10 @@
   justify-content: flex-start;
   width: 90vw;
   height: 80vh;
+  @include mobile {
+    height: auto;
+    width: 100vw;
+  }
   .component-productorders {
     width: 100%;
     height: 100%;
