--- a/src/css/CustomerOrderList.scss
+++ b/src/css/CustomerOrderList.scss
@@ -9,6 +9,9 @@
   justify-content: flex-start;
   align-items: center;
   transition: all 0.4s ease;
+  @include mobile {
+    display: none;
+  }
 }
 .component-customer-order-list__without-details {
   width: 90vw;
@@ -21,6 +24,9 @@
   justify-content: flex-start;
   align-items: center;
   transition: all 0.4s ease;
+  @include mobile {
+    width: 100vw;
+  }
 }
 .component-customer-order-list__pagination__container {
   width: 100%;
@@ -29,6 +35,9 @@
   align-items: center;
   height: 60px;
   padding: 0 24px;
+  @include mobile {
+    justify-content: center;
+  }
 }
 .component-customer-order-list__pagination__container input {
   font-size: 14px;
@@ -37,6 +46,9 @@
   border-radius: 5px;
   border: 1px solid #d8d8d8;
   padding: 0px 10px;
+  @include mobile {
+    display: none;
+  }
 }
 
 .pagination {
@@ -51,6 +63,10 @@
   box-shadow: 0px 0px 5px #a5a5a5;
   width: 200px;
   height: 40px;
+  @include mobile {
+    height: 30px;
+    border-radius: 3px;
+  }
 }
 .link-item {
   text-decoration: none;
