--- a/src/components/App.css
+++ b/src/components/App.css
@@ -174,6 +174,67 @@
   border: 1px solid #a5a5a5;
 }
 
+.component-log-out {
+  width: 100vw;
+  height: 100vh;
+  background-color: #c7c7c7a5;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 88888888;
+}
+.component-log-out .control-panel {
+  width: 85%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+.component-log-out .control-panel p {
+  font-size: 22px;
+  color: #8c8c8c;
+}
+@media (max-width: 450px) {
+  .component-log-out .control-panel p {
+    font-size: 16px;
+  }
+}
+.component-log-out .control-panel .button-group {
+  width: 88%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.component-log-out .control-panel .button-group button {
+  height: 35px;
+  margin-top: 10px;
+  font-size: 1rem;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+.component-log-out .control-panel .button-group button.cancel {
+  box-shadow: 0 0 3px #ffba2d;
+  background-color: #ffba2d;
+}
+.component-log-out .control-panel .button-group button.logout {
+  background-color: #f55747;
+  box-shadow: 0 0 3px #f55747;
+}
+@media (max-width: 450px) {
+  .component-log-out .control-panel .button-group button {
+    border-radius: 3px;
+  }
+}
+
 .component-customer-manage {
   width: calc(90vw - 20px);
   height: 90vh;
