--- a/src/css/CustomerOrderList.scss
+++ b/src/css/CustomerOrderList.scss
@@ -38,16 +38,17 @@
   @include mobile {
     justify-content: center;
   }
-}
-.component-customer-order-list__pagination__container input {
-  font-size: 14px;
-  width: 30%;
-  height: 40px;
-  border-radius: 5px;
-  border: 1px solid #d8d8d8;
-  padding: 0px 10px;
-  @include mobile {
-    display: none;
+  input,
+  select {
+    font-size: 14px;
+    width: 22%;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid #d8d8d8;
+    padding: 0px 10px;
+    @include mobile {
+      display: none;
+    }
   }
 }
 
