--- a/src/components/orders/products/sass/Page.scss
+++ b/src/components/orders/products/sass/Page.scss
@@ -24,17 +24,38 @@
       }
     }
     .section {
-      border-radius: 5px;
-      border: 1px solid color("border");
+      border-bottom: 1px solid #a5a5a540;
       margin-top: 20px;
+      padding: 0.5rem 1rem;
 
       .header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 90%;
+        width: 100%;
+        p {
+          margin: 0;
+          padding: 0;
+          font-size: 1.2rem;
+          color: color("main");
+        }
         h2 {
           color: color("textPrimary");
+        }
+        .control {
+          min-width: 10rem;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          button {
+            border: 2px solid color("main");
+            box-shadow: 0 0 3px color("boxShadow");
+            outline: none;
+            color: color("main");
+            background: #fff;
+            padding: 0.2rem 0.5rem;
+            border-radius: 0.2rem;
+          }
         }
       }
       .component-detail-view-table {
