--- a/src/components/shared/variables.scss
+++ b/src/components/shared/variables.scss
@@ -1,13 +1,34 @@
 $colors: (
-  textSubtitle: #a5a5a5,
+  text: #3b3b3b,
+  textSubtitle: #7c7c7c,
   textPrimary: #8c8c8c,
-  textButton: #fff,
-  bodyBackground: #fff,
-  border: #a5a5a5,
-  cover: #c7c7c7a5,
+  textLighter: #3b3b3b,
   main: #ffba2d,
-  boxShadow: #a5a5a5,
-  secondary: #f55747
+  mainOpicity: #ffba2dcf,
+  secondary: #f55747,
+  myRed: #f55747,
+  myBlue: rgb(76, 76, 250),
+  boxShadow: #d0d0d0,
+  bodyBackground: #fff,
+  headBackground: #ffba2d,
+  lightBackground: #f6f6f6,
+  errorBackground: #f98c8133,
+  tableRowBackground: #b5b4b41a,
+  icon: #ffba2d,
+  // cover: #000000a5,
+  cover: #c7c7c7a5,
+  header1: #8c8c8c,
+  border: #a5a5a540,
+  border2: #a5a5a540,
+  borderTable: #a5a5a540,
+  lightBorder: #e0dcdc,
+  boxshadow2: #fff,
+  textButton: #fff,
+  // background2: #393a3d,
+  background2: #d1cfcf24,
+  textShadow: #000,
+  contactGreen: #2dc100,
+  whiteCover: rgba(255, 255, 255, 0.65)
 );
 
 @function color($color_name) {
