--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1826,6 +1826,26 @@ table tbody tr td.long-text span {
   margin-bottom: 1rem;
   outline: none;
 }
+.edit-form .discounts-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+}
+.edit-form .discounts-list .discount {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+}
+.edit-form .discounts-list .discount .discount-price {
+  border-bottom: 1px solid #5a5a5a60;
+  width: 5rem;
+  font-size: 1rem;
+  padding: 0.2rem 0.5rem 0 0.5rem;
+}
 
 .edit-form input[type=text] {
   margin-bottom: 2px;
