--- a/src/css/EditForm.scss
+++ b/src/css/EditForm.scss
@@ -37,6 +37,26 @@
     margin-bottom: 1rem;
     outline: none;
   }
+  .discounts-list {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    .discount {
+      width: 100%;
+      height: max-content;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 0.5rem;
+      .discount-price {
+        border-bottom: 1px solid #5a5a5a60;
+        width: 5rem;
+        font-size: 1rem;
+        padding: 0.2rem 0.5rem 0 0.5rem;
+      }
+    }
+  }
 }
 .edit-form input[type="text"] {
   margin-bottom: 2px;
