--- a/src/components/App.css
+++ b/src/components/App.css
@@ -103,6 +103,22 @@
     width: 20%;
   }
 }
+.component-sales-group-selector .exportExcelButton {
+  font-size: 0.8rem;
+  padding: 0.5rem 1rem;
+  color: #fff;
+  background-color: #ffba2d;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  box-shadow: 0 0 3px #d0d0d0;
+}
+@media (max-width: 450px) {
+  .component-sales-group-selector .exportExcelButton {
+    font-size: 0.5rem;
+    padding: 0.2rem 0.5rem;
+  }
+}
 @media (max-width: 450px) {
   .component-sales-group-selector {
     height: 5vh;
