--- a/src/components/shared/SalesGroupSelector.scss
+++ b/src/components/shared/SalesGroupSelector.scss
@@ -17,6 +17,20 @@
       width: 20%;
     }
   }
+  .exportExcelButton {
+    font-size: 0.8rem;
+    padding: 0.5rem 1rem;
+    color: #fff;
+    background-color: color("main");
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    box-shadow: 0 0 3px color("boxShadow");
+    @include mobile {
+      font-size: 0.5rem;
+      padding: 0.2rem 0.5rem;
+    }
+  }
   @include mobile {
     height: 5vh;
   }
