--- a/src/components/groupon/index.scss
+++ b/src/components/groupon/index.scss
@@ -4,10 +4,31 @@
   overflow: scroll;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
+  padding: 2rem 0rem;
   @include mobile {
     width: 100vw;
+  }
+  .sales-group-selector-container {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    .select {
+      height: 2rem;
+    }
+    .button-large {
+      height: 2rem;
+      padding: 0 1rem;
+      outline: none;
+      border-radius: 4px;
+      border: none;
+      box-shadow: 0 0 3px color("boxShadow");
+      color: #fff;
+      background-color: color("myBlue");
+    }
   }
   .sales-group {
     width: 90%;
@@ -18,7 +39,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    padding-bottom: 20px;
     @include mobile {
       height: auto;
       padding-top: 20px;
@@ -123,10 +143,17 @@
         }
       }
     }
+    .close-section {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 0.5rem;
+      color: color("textPrimary");
+    }
   }
   .store {
     width: 90%;
-    height: 45%;
+    flex: 1;
     box-shadow: 0 2px 5px #a5a5a5;
     border-radius: 3px;
     display: flex;
