--- a/src/components/App.css
+++ b/src/components/App.css
@@ -638,6 +638,81 @@ table tbody tr td.long-text span {
   color: #fff;
   background-color: #4c4cfa;
 }
+.screen-groupon .store-list-container {
+  display: flex;
+  width: 90%;
+  flex-direction: column;
+}
+.screen-groupon .store-list-container .title {
+  font-size: 1rem;
+  color: #8c8c8c;
+}
+.screen-groupon .store-list-container .store-list {
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+  width: 100%;
+  border-top: 1px solid #c3c3c360;
+  border-bottom: 1px solid #c3c3c360;
+  padding: 0.5rem 1rem;
+}
+.screen-groupon .store-list-container .store-list .store-list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #4c4cfa;
+  margin-bottom: 0.5rem;
+}
+.screen-groupon .store-list-container .store-list .store-list-item .content {
+  display: flex;
+  flex-direction: column;
+}
+.screen-groupon .store-list-container .store-list .store-list-item .content .name {
+  font-size: 1rem;
+  color: #3b3b3b;
+  margin-bottom: 0.5rem;
+}
+.screen-groupon .store-list-container .store-list .store-list-item .content .date-list {
+  display: flex;
+  flex-direction: column;
+}
+.screen-groupon .store-list-container .store-list .store-list-item .content .date-list .date-list-item {
+  background-color: #4c4cfa;
+  color: #fff;
+  padding: 0.3rem 0.6rem;
+  border-radius: 3px;
+  margin-bottom: 0.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.screen-groupon .store-list-container .store-list .store-list-item .control .button-edit {
+  background-color: #ffba2d;
+  outline: none;
+  border: none;
+  height: calc(100% - 0.6rem);
+  padding: 1rem;
+  color: #3b3b3b;
+  font-size: 1rem;
+  text-transform: uppercase;
+  border-radius: 5px;
+  box-shadow: 0 0 3px #d0d0d0;
+}
+.screen-groupon .store-list-container .button-container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0.5rem 1rem;
+}
+.screen-groupon .store-list-container .button-container button {
+  height: 2rem;
+  padding: 0 1rem;
+  outline: none;
+  border-radius: 4px;
+  border: none;
+  box-shadow: 0 0 3px #d0d0d0;
+  color: #fff;
+  background-color: #4c4cfa;
+}
 .screen-groupon .sales-group {
   width: 90%;
   height: 45%;
