--- a/src/components/groupon/index.scss
+++ b/src/components/groupon/index.scss
@@ -7,6 +7,49 @@
   justify-content: flex-start;
   align-items: center;
   padding: 2rem 0rem;
+  .link-new-store {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    padding: 1rem;
+    box-shadow: 0 0 10px color("boxShadow");
+    border-radius: 5px;
+    .select-input,
+    .date-input {
+      height: 2rem;
+      margin-bottom: 0.5rem;
+      border-radius: 3px;
+      border: 1px solid #3c3c3c60;
+      outline: none;
+    }
+    .button-container {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      .button-save,
+      .button-cancel {
+        outline: none;
+        border-radius: 4px;
+        border: none;
+        padding: 0.5rem 1rem;
+        box-shadow: 0 0 3px color("boxShadow");
+        color: #fff;
+        text-transform: uppercase;
+        margin-left: 0.5rem;
+      }
+      .button-save {
+        background-color: color("main");
+      }
+      .button-cancel {
+        background-color: color("myRed");
+      }
+    }
+
+    @include mobile {
+      width: 100%;
+    }
+  }
   @include mobile {
     width: 100vw;
   }
