--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -5,6 +5,8 @@
 @import "./auth/index.scss";
 @import "./orders/index.scss";
 @import "./reports/detailView/tables/style.scss";
+@import "./shops/scss/index.scss";
+
 .app {
   display: flex;
   width: 100vw;
